[tool.poetry]
name = "proxy-bootstrap"
version = "0.1.0"
description = ""
authors = ["Alexandre Georges <alexandre@mageo.ch>"]
license = "Copyright 2025 mageo services sàrl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
